# rustico

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  example.env
.github/workflows/: ci.yml  docker.yml
config/: messages.yaml
data/: .gitkeep  rustico_state.yaml
src/: anilist.rs  ann.rs  api.rs  config.rs  discord.rs  main.rs  models.rs  processor.rs  state.rs  utils.rs
src/sources/: anilist.rs  ann.rs  mod.rs
