[package]
name = "rustico"
version = "0.4.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rss = "2.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
tokio-cron-scheduler = "0.13"
base64 = "0.22.1"
scraper = "0.18"
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }
regex = "1"
once_cell = "1"
