[package]
name = "rustico"
version = "0.4.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync", "fs", "net"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
rss = "2.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
tokio-cron-scheduler = "0.13"
base64 = "0.22.1"
scraper = "0.18"
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }
tower = { version = "0.5", features = ["limit"] }
regex = "1"
